add some experiments